--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-w-repeat",
   "description": "WillBot: Advanced repeating functions",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -9,14 +9,25 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
     "plugin"
   ],
-  "devDependencies": {},
   "peerDependencies": {
     "koishi": "4.17.11"
+  },
+  "dependencies": {
+    "@satorijs/protocol": "^1.4.2",
+    "dayjs": "^1.11.13",
+    "dedent": "^1.5.3"
+  },
+  "koishi": {
+    "service": {
+      "required": [
+        "database",
+		"reactive"
+      ]
+    }
   }
 }
