--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-w-repeat",
   "description": "WillBot: Advanced repeating functions",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -15,7 +15,8 @@
     "plugin"
   ],
   "peerDependencies": {
-    "koishi": "4.17.11"
+    "koishi": "4.17.11",
+    "koishi-plugin-w-option-conflict": "^0.0.2"
   },
   "dependencies": {
     "@satorijs/protocol": "^1.4.2",
@@ -29,5 +30,8 @@
         "reactive"
       ]
     }
+  },
+  "devDependencies": {
+    "koishi-plugin-w-option-conflict": "^0.0.2"
   }
 }
