--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-w-repeat",
   "description": "WillBot: Advanced repeating functions",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -21,13 +21,17 @@
   "dependencies": {
     "@satorijs/protocol": "^1.4.2",
     "dayjs": "^1.11.13",
-    "dedent": "^1.5.3"
+    "dedent": "^1.5.3",
+    "koishi-plugin-w-echarts": "workspace:^"
   },
   "koishi": {
     "service": {
       "required": [
         "database",
         "reactive"
+      ],
+      "optional": [
+        "echarts"
       ]
     }
   },
