--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-w-repeat",
   "description": "WillBot: Advanced repeating functions",
-  "version": "1.2.6",
+  "version": "1.3.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -16,12 +16,24 @@
   ],
   "peerDependencies": {
     "koishi": "^4.18.0",
+    "koishi-plugin-w-as-forward": "workspace:^",
     "koishi-plugin-w-option-conflict": "^0.1.0"
   },
   "dependencies": {
+    "@satorijs/element": "^3.1.7",
     "dayjs": "^1.11.13",
     "dedent": "^1.5.3",
     "pretty-format": "^29.7.0"
+  },
+  "devDependencies": {
+    "@koishijs/plugin-database-memory": "^3.6.0",
+    "@koishijs/plugin-mock": "^2.6.6",
+    "@satorijs/protocol": "^1.4.2",
+    "koishi-plugin-puppeteer": "^3.9.0",
+    "koishi-plugin-w-as-forward": "workspace:^",
+    "koishi-plugin-w-echarts": "workspace:^",
+    "koishi-plugin-w-option-conflict": "^0.1.0",
+    "koishi-plugin-w-tesseract": "workspace:^"
   },
   "koishi": {
     "service": {
@@ -33,15 +45,6 @@
         "echarts"
       ]
     }
-  },
-  "devDependencies": {
-    "@koishijs/plugin-database-memory": "^3.6.0",
-    "@koishijs/plugin-mock": "^2.6.6",
-    "@satorijs/protocol": "^1.4.2",
-    "koishi-plugin-puppeteer": "^3.9.0",
-    "koishi-plugin-w-echarts": "workspace:^",
-    "koishi-plugin-w-option-conflict": "^0.1.0",
-    "koishi-plugin-w-tesseract": "workspace:^"
   },
   "scripts": {
     "build": "yarn workspace willbot build w-repeat",
