--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-w-repeat",
   "description": "WillBot: Advanced repeating functions",
-  "version": "1.6.2",
+  "version": "2.0.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -17,7 +17,7 @@
   "peerDependencies": {
     "koishi": "^4.18.0",
     "koishi-plugin-w-as-forward": "workspace:^",
-    "koishi-plugin-w-option-conflict": "^0.1.0"
+    "koishi-plugin-w-option-conflict": "^0.1.1"
   },
   "dependencies": {
     "@satorijs/element": "^3.1.7",
@@ -28,13 +28,14 @@
   "devDependencies": {
     "@koishijs/plugin-database-memory": "^3.6.0",
     "@koishijs/plugin-mock": "^2.6.6",
-    "@node-rs/jieba": "^1.10.4",
     "@satorijs/protocol": "^1.4.2",
+    "@willbot-koishi/jieba": "^0.5.0",
     "koishi-plugin-puppeteer": "^3.9.0",
     "koishi-plugin-w-as-forward": "workspace:^",
     "koishi-plugin-w-echarts": "workspace:^",
+    "koishi-plugin-w-jieba": "workspace:^",
     "koishi-plugin-w-node": "workspace:^",
-    "koishi-plugin-w-option-conflict": "^0.1.0",
+    "koishi-plugin-w-option-conflict": "^0.1.1",
     "koishi-plugin-w-tesseract": "workspace:^"
   },
   "koishi": {
